# doxy2mdx

./: README.md  config.yaml  pyproject.toml  requirements.txt
dev/project/: CMakeLists.txt
dev/project/docs/: Doxyfile  config.yaml  doxygen.css
dev/project/docs/mdx/: test_sample.mdx
dev/project/include/: sample.hpp
dev/project/include/doxy2mdx/: Config.hpp  Converter.hpp  XmlParser.hpp
dev/project/src/: Config.cpp  Converter.cpp  XmlParser.cpp  main.cpp
docs/: doxygen.css
doxy2mdx/: __main__.py  converter.py  converter_mdx_with_react.py  converter_react.py  converter_simple.py
doxy2mdx/components/: MemberDefinition.jsx  MemberItem.jsx  MemberName.jsx  MemberTitle.jsx  doxygen.jsx
tests/: test_example.py
